--- a/Shifts/Shifts/Base.lproj/Main.storyboard
+++ b/Shifts/Shifts/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -87,11 +88,173 @@
                             <outlet property="delegate" destination="weS-LY-KnS" id="XMt-mH-3Lt"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Coffe Co Shifts" id="Rg4-5y-hIV"/>
+                    <navigationItem key="navigationItem" title="Coffe Co Shifts" id="Rg4-5y-hIV">
+                        <barButtonItem key="rightBarButtonItem" title="new shift" id="VHM-FM-5G5">
+                            <connections>
+                                <action selector="addShiftButtonTapped:" destination="weS-LY-KnS" id="1Ko-Rh-Uuv"/>
+                                <segue destination="pPN-Sa-AV9" kind="presentation" id="3sv-tB-QeT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addShiftButton" destination="VHM-FM-5G5" id="nsf-l8-SvN"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cP7-hN-gBK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1272.4637681159422" y="-119.19642857142857"/>
+        </scene>
+        <!--Add Shift View Controller-->
+        <scene sceneID="36W-fR-Kgo">
+            <objects>
+                <viewController id="pPN-Sa-AV9" customClass="AddShiftViewController" customModule="Shifts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6xe-9X-TTa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="88" translatesAutoresizingMaskIntoConstraints="NO" id="U5n-ut-GwX">
+                                <rect key="frame" x="29.5" y="20" width="355" height="36"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="owH-6i-szG">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                        <state key="normal" title="X">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="dismissButtonTapped:" destination="pPN-Sa-AV9" eventType="touchUpInside" id="Zd4-Ky-5Bz"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a Shift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CYH-PE-4W7">
+                                        <rect key="frame" x="118" y="0.0" width="115" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4HS-C4-wcU">
+                                        <rect key="frame" x="321" y="0.0" width="34" height="36"/>
+                                        <state key="normal" title="Save"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3rq-28-Mch">
+                                <rect key="frame" x="20" y="272" width="374" height="416"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cYo-yQ-2Wk" userLabel="employeeStack">
+                                        <rect key="frame" x="27" y="0.0" width="320" height="128"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Employee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qC8-Qg-twm">
+                                                <rect key="frame" x="119" y="0.0" width="82.5" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sIx-hd-LGi">
+                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="cLI-wp-emB"/>
+                                                </constraints>
+                                            </pickerView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xZ8-AG-Dhf">
+                                        <rect key="frame" x="27" y="144" width="320" height="128"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Role" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4j-wF-3Dk">
+                                                <rect key="frame" x="141.5" y="0.0" width="37" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IuM-J6-6an">
+                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="OQr-U8-45G"/>
+                                                </constraints>
+                                            </pickerView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="9Eg-HN-Hzt">
+                                        <rect key="frame" x="27" y="288" width="320" height="128"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxI-z3-UaP">
+                                                <rect key="frame" x="137.5" y="0.0" width="45.5" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc5-6C-HDW">
+                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="wiu-SY-UcW"/>
+                                                </constraints>
+                                            </pickerView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Oqu-rO-R6I">
+                                <rect key="frame" x="20" y="81" width="374" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVH-kh-iZ4">
+                                        <rect key="frame" x="144" y="0.0" width="86" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="1Ij-cc-SiS">
+                                        <rect key="frame" x="27" y="28" width="320" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="6Cx-Kw-qlM"/>
+                                        </constraints>
+                                    </datePicker>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="r1K-2G-lWi">
+                                <rect key="frame" x="20" y="164" width="374" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8w-BW-gzP">
+                                        <rect key="frame" x="148.5" y="0.0" width="77" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="llP-Ag-rVD">
+                                        <rect key="frame" x="27" y="28" width="320" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="iog-0Z-vkJ"/>
+                                        </constraints>
+                                    </datePicker>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="t3k-8f-umT"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Oqu-rO-R6I" firstAttribute="leading" secondItem="t3k-8f-umT" secondAttribute="leading" constant="20" id="Cvy-2l-9t9"/>
+                            <constraint firstItem="t3k-8f-umT" firstAttribute="trailing" secondItem="r1K-2G-lWi" secondAttribute="trailing" constant="20" id="GXP-fS-xIX"/>
+                            <constraint firstItem="U5n-ut-GwX" firstAttribute="centerX" secondItem="6xe-9X-TTa" secondAttribute="centerX" id="KaE-Gv-q68"/>
+                            <constraint firstItem="U5n-ut-GwX" firstAttribute="top" secondItem="t3k-8f-umT" secondAttribute="top" constant="20" id="Kkm-ZL-kaZ"/>
+                            <constraint firstItem="3rq-28-Mch" firstAttribute="top" secondItem="r1K-2G-lWi" secondAttribute="bottom" constant="30" id="QTB-Cv-c8e"/>
+                            <constraint firstItem="Oqu-rO-R6I" firstAttribute="top" secondItem="U5n-ut-GwX" secondAttribute="bottom" constant="25" id="WR9-gu-fUa"/>
+                            <constraint firstAttribute="trailing" secondItem="Oqu-rO-R6I" secondAttribute="trailing" constant="20" id="Zw1-95-9yO"/>
+                            <constraint firstItem="3rq-28-Mch" firstAttribute="leading" secondItem="t3k-8f-umT" secondAttribute="leading" constant="20" id="a48-5T-gts"/>
+                            <constraint firstItem="r1K-2G-lWi" firstAttribute="top" secondItem="Oqu-rO-R6I" secondAttribute="bottom" constant="5" id="d4u-p1-sxI"/>
+                            <constraint firstItem="t3k-8f-umT" firstAttribute="trailing" secondItem="3rq-28-Mch" secondAttribute="trailing" constant="20" id="eX2-I4-EuN"/>
+                            <constraint firstItem="r1K-2G-lWi" firstAttribute="leading" secondItem="t3k-8f-umT" secondAttribute="leading" constant="20" id="l4w-ZX-XEr"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="colorPicker" destination="qc5-6C-HDW" id="em6-l0-hlu"/>
+                        <outlet property="employeePicker" destination="sIx-hd-LGi" id="Sl6-tf-qvE"/>
+                        <outlet property="endDatePicker" destination="llP-Ag-rVD" id="meO-nu-5Fx"/>
+                        <outlet property="rolePicker" destination="IuM-J6-6an" id="Xpj-yw-X2T"/>
+                        <outlet property="startDatePicker" destination="1Ij-cc-SiS" id="HCa-N1-0JZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="94k-bW-HH4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2131.8840579710145" y="-119.19642857142857"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tED-qI-rsP">
