--- a/Shifts/Shifts/Base.lproj/Main.storyboard
+++ b/Shifts/Shifts/Base.lproj/Main.storyboard
@@ -48,18 +48,23 @@
                                             </subviews>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="H5g-8v-5JZ">
-                                            <rect key="frame" x="303.5" y="22" width="102.5" height="25"/>
+                                            <rect key="frame" x="328.5" y="22" width="77.5" height="25"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wfu-Bw-FCh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="25"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
                                                     <color key="backgroundColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="cwx-Zz-SbK"/>
+                                                        <constraint firstAttribute="width" constant="25" id="cwx-Zz-SbK"/>
                                                         <constraint firstAttribute="height" constant="25" id="nZl-c2-qsG"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="range" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4QC-jz-dp7">
-                                                    <rect key="frame" x="65" y="4" width="37.5" height="17"/>
+                                                    <rect key="frame" x="40" y="4" width="37.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
